# BMSTU_programming_IU-9

./: .gitattributes
algorithms/1.Изучение языка C/: 10_maxarray.c  11_binsearch.c  12_peak.c  14_wcount.c  15_fibstr.c  1_polynom.c  2_mulmod.c  3_fibsys.c  4_intersect.c  5_permut.c  6_maxk.c  8_saddlepoint.c  9_revarray.c
algorithms/2.Алгоритмы сортировки и поиска/: 12_prefixes.c  13_kmpall.c  15_bmall.c  17_rangemax.c  19_rangepeak.c  20_rangegcd.c  21_maxprod.c  3_bubblesort.c  4_shellsort.c  5_csort.c  6_heapsort.c  7_mergesort.c  8_quicksort.c  9_dsort.c
algorithms/3.Применение динамических множеств/: 10_ranktree.c  12_disparray(1 балл из 3).c  14_ptrie.c  1_qsstack.c  2_stackmachine.c  3_circbuf.c  4_qmax.c  5_merge.c  7_listisort(отклонено).c  7_listisort.c  8_listbsort(отклонено).c  8_listbsort.c
Алгоритмы компьютерной графики/Лабораторная 1/: CMakeLists.txt  main.cpp
Алгоритмы компьютерной графики/Лабораторная 2/: CMakeLists.txt  main.cpp
Алгоритмы компьютерной графики/Лабораторная 3/: CMakeLists.txt  main.cpp
Алгоритмы компьютерной графики/Лабораторная 4/: CMakeLists.txt  main.cpp
Алгоритмы компьютерной графики/Лабораторная 5/: CMakeLists.txt  main.cpp
Алгоритмы компьютерной графики/Лабораторная 6/: CMakeLists.txt  main.cpp
Алгоритмы компьютерной графики/Лабораторная 7/: CMakeLists.txt  main.cpp
Алгоритмы компьютерной графики/Лабораторная 8/: CMakeLists.txt  main.cpp
Базы данных/: lab_11_Nashchekin.sql  lab_13_Nashchekin.sql  lab_14_Nashchekin.sql  lab_15_Nashchekin.sql  lab_1_Nashchekin.docx  lab_2_Nashchekin.docx  lab_3_Nashchekin.docx  lab_4_Nashchekin.docx  lab_5.sql  lab_6.sql  lab_7_Nashchekin.sql  lab_8_Nashchekin.sql  lab_9_Nashchekin.sql
Генерация оптимального кода/lab2/: CMakeLists.txt  lab2.cpp
Генерация оптимального кода/lab3/: CMakeLists.txt  lab3.cpp  text.txt
Генерация оптимального кода/lab4/: CMakeLists.txt  README.md  lab4.cpp  text.txt
Генерация оптимального кода/lab4/DOT/: cfg.dot  ssa.dot
Дискретная математика/: README.txt
Конструирование компиляторов/lab3.1/lab3.1-2/: main.py  pyproject.toml  text.txt
Конструирование компиляторов/lab3.1/lab3.1-2/calculator/: calculator.py
Конструирование компиляторов/lab3.1/lab3.1-2/graph_gen/: graph_gen.py
Конструирование компиляторов/lab3.1/lab3.1-2/lex_analyzer/: scanner.py  token.py
Конструирование компиляторов/lab3.1/lab3.1-2/syntax/: AST.py  parser.py
Объектно-функциональное программирование/: lab1.txt
Операционные системы/: lab1.tex  lab2.tex  lab3.tex  lab4.tex
Разработка параллельных и распределённых программ/Лабораторная 2/lab2/: CMakeLists.txt  README.md  main.cpp
Разработка параллельных и распределённых программ/Лабораторная 2/lab2/min_nev/: min_nev.cpp  min_nev.h
Разработка параллельных и распределённых программ/Лабораторная 2/lab2/multiplication/: multiplication.cpp  multiplication.h
Разработка параллельных и распределённых программ/Лабораторная 2/lab2/print/: print.cpp  print.h
Разработка параллельных и распределённых программ/Лабораторная 2/lab2/systems/: systems_creation.cpp  systems_creation.h
Разработка параллельных и распределённых программ/Лабораторная 3/Lab3/: CMakeLists.txt  main.cpp
Разработка параллельных и распределённых программ/Лабораторная 3/Lab3/min_nev/: min_nev.cpp  min_nev.h
Разработка параллельных и распределённых программ/Лабораторная 3/Lab3/multiplication/: multiplication.cpp  multiplication.h
Разработка параллельных и распределённых программ/Лабораторная 3/Lab3/print/: print.cpp  print.h
Разработка параллельных и распределённых программ/Лабораторная 3/Lab3/systems/: systems_creation.cpp  systems_creation.h
Численные методы/Лаба 5/: lab5.tex  main.py  pyproject.toml
Языки и методы программирования/: lab1.java
(+245 files in other folders)
