[tool.poetry]
name = "lab5"
version = "0.1.0"
description = ""
authors = ["RELICT <pigift@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sympy = "^1.13.3"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
ruff = "^0.11.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
