[tool.poetry]
name = "lab3-1-2"
version = "0.1.0"
description = ""
authors = ["RELICT <pigift@yandex.ru>"]
readme = "README.md"
packages = [{include = "lab3"}]

[tool.poetry.dependencies]
python = "^3.12"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
